<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".Activity.ContactActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_about_us"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        app:title="Contact Us"
        app:titleCentered="true"
        app:titleTextColor="@color/colorWhite"
        android:background="@drawable/toolbar_gradient"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/colorWhite"
        android:elevation="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_about_us">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/about_us_linearlayout_background"
                android:orientation="vertical"
                android:padding="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/app_logo_about_us"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView_app_name_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/ic_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_TitleVersion_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_version"
                            android:textColor="@color/colorGreyDark"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_app_version_about_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/about_us_version_text"
                            android:textColor="@color/colorBlack" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/about_us_linearlayout_background"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView_TitleAuthore_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_author"
                        android:textColor="@color/colorGreyDark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_user" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_TitleCompany_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_Company"
                                android:textColor="@color/colorGreyDark"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_app_author_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:text="@string/about_us_company_name"
                                android:textColor="@color/colorBlack" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_email" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_TitleEmail_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_email"
                                android:textColor="@color/colorGreyDark"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_app_email_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:text="@string/about_us_email_text"
                                android:textColor="@color/colorBlack" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_website" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_TitleWebsite_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_website"
                                android:textColor="@color/colorGreyDark"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_app_website_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:text="@string/about_us_website_text"
                                android:textColor="@color/colorBlack" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_call" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView_TitleContact_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_contact"
                                android:textColor="@color/colorGreyDark"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_app_contact_about_us"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:text="@string/about_us_contact_text"
                                android:textColor="@color/colorBlack" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>