<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/registeration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerConstituency"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:gravity="center" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerCity_Village"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:gravity="center"
                android:visibility="visible" />


            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerZone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:gravity="center" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerPrabhag_Ward"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:gravity="center"
                android:visibility="visible" />


            <!-- <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                 android:id="@+id/spinnerSeries"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="@dimen/_10ssp"
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/border"
                 android:elevation="8dp"
                 android:gravity="center" />-->

            <!--<com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinner_colony"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:gravity="center"
                android:visibility="visible" />-->


            <!-- <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                 android:id="@+id/spinner_row"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="@dimen/_10ssp"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/border"
                 android:elevation="8dp"
                 android:gravity="center" />-->

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignEnd="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginRight="15dp"
                android:elevation="8dp"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.13"
                    android:buttonTint="@color/orange_bjp"
                    android:checked="false"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.13"
                    android:buttonTint="@color/orange_bjp"
                    android:checked="false"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Female"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.13"
                    android:buttonTint="@color/orange_bjp"
                    android:checked="false"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Others"
                    android:textSize="18sp" />

            </RadioGroup>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/middle_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:elevation="8dp"
                android:background="@drawable/border"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/voterID">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/voterID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:elevation="8dp"
                android:background="@drawable/border"
                android:padding="15dp"
                android:text="DOB"
                android:textColor="@color/colorBlack" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="Booth No.">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBoothNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="Serial No.">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSerialNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/votingCenter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/voting_center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/orange_bjp"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:rippleColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>